--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 <body>
     <header>
-        <img class="logo" src="/images/32px-Netscape-2007-logo.svg.png" ><sub>&trade;</sub></img>
+        <img class="logo" src="32px-Netscape-2007-logo.svg.png" ><sub>&trade;</sub></img>
         <h1>Netscape<sup>&reg;</sup><span> Navigator</span></h1><img class="get" src="/images/icon1.jpg">
     </header>
 
